docs/7.52/md/abapinsert_report_shortref.md
---
title: "INSERT REPORT - Quick reference"
description: |
  Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm) Syntax INSERT REPORT prog FROM itab MAXIMUM WIDTH INTO wid  KEEPING DIRECTORY ENTRY   PROGRAM TYPE pt FIXED-POINT ARITHMETIC fp VERSIONUNICODE ENABLING
version: "7.52"
category: "ui"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report_shortref.htm"
abapFile: "abapinsert_report_shortref.htm"
keywords: ["insert", "do", "if", "try", "internal-table", "abapinsert", "report", "shortref"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_shortref.htm) →  I

INSERT REPORT - Quick reference

[Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapinsert_report.htm)

Syntax

INSERT REPORT prog FROM itab
              *\[*MAXIMUM WIDTH INTO wid*\]*
              *{* *\[*KEEPING DIRECTORY ENTRY*\]*
              *|* *{* *\[*PROGRAM TYPE pt*\]*
                  *\[*FIXED-POINT ARITHMETIC fp*\]*
                  *\[*VERSION*|**{*UNICODE ENABLING*}* vs*\]* *}*
              *|* *\[*DIRECTORY ENTRY dir*\]* *}*.

Effect

Inserts the source code contained in the internal table itab as an ABAP program prog into the [repository](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_glosry.htm "Glossary Entry").

Additions

-   MAXIMUM WIDTH INTO wid
    Returns the number of characters of the longest source code line passed in wid.
    
-   KEEPING DIRECTORY ENTRY
    Preserves the properties of an existing program.
    
-   PROGRAM TYPE pt
    The [program type](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_type_glosry.htm "Glossary Entry") is specified by pt.
    
-   FIXED-POINT ARITHMETIC fp
    Defines fixed point arithmetic by specifying " " or "X" in fp.
    
-   VERSION vs
    Defines the [ABAP language version](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_versions.htm) by specifying the version ID in vs.
    
-   UNICODE ENABLING vs
    Obsolete: Functions like VERSION vs.
    
-   DIRECTORY ENTRY dir
    The [program properties](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_attribute_glosry.htm "Glossary Entry") are specified by the entries in the structure dir of the type TRDIR.